--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,8 @@ body {
   background-color: #434548;
   color: #fff; }
   body #app > .container {
-    padding-bottom: 2em; }
+    padding-bottom: calc(2em + 200px);
+    min-height: calc(100vh - 60px); }
   body .panel {
     color: #636b6f;
     border: 0;
@@ -58,7 +59,8 @@ footer {
   width: 100%;
   background-color: #232427;
   height: 200px;
-  color: #666; }
+  color: #666;
+  margin-top: -200px; }
   footer h5 {
     color: #fff; }
   footer a {
@@ -214,6 +216,8 @@ form ::-moz-placeholder {
   opacity: 1; }
 form :-ms-input-placeholder {
   color: #555 !important; }
+form .blocklink input[type="checkbox"] ~ label:before, form .blocklink input[type="checkbox"]:checked ~ label:before, form .blocklink input[type="checkbox"] ~ label:active, form .blocklink input[type="checkbox"]:focus ~ label:before {
+  color: white; }
 form input[type=radio],
 form input[type=checkbox] {
   border: 0;
