--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -23,7 +23,7 @@ label .fa { font-size: 1.5em; }
 img#edit-img { padding: 25px; }
 body {
 	background-color: $bgc; color: #fff;
-	#app > .container { padding-bottom: 2em; }
+	#app > .container { padding-bottom: calc(2em + 200px); min-height: calc(100vh - 60px); }
 	.panel {
 		color: #636b6f; border: 0; border-radius: 0;
 		.form-control {
@@ -48,7 +48,7 @@ body {
 }
 
 footer {
-	width:  100%; background-color: #232427; height: 200px; color: #666;
+	width: 100%; background-color: #232427; height: 200px; color: #666; margin-top: -200px;
 	h5 { color: #fff; }
 	a {
 		color: $accent;
@@ -138,6 +138,10 @@ form {
 	::-moz-placeholder { color: #555 !important; opacity: 1 }
 	:-ms-input-placeholder { color: #555 !important; }
 
+	.blocklink input[type="checkbox"] {
+		& ~ label:before, &:checked ~ label:before,
+		& ~ label:active, &:focus ~ label:before { color: white; }
+	}
 	// FA checkboxes/radio buttons
 	input[type=radio],
 	input[type=checkbox] {
