--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,13 @@
 /* 1280px */
 /* 1350px */
 /* 1488px */
+.alert-success {
+  background-color: #57B97F;
+  border-color: #57B97F;
+  color: #005A24;
+  border-radius: 0;
+  margin-top: -22px; }
+
 label .fa {
   font-size: 1.5em; }
 
@@ -18,25 +25,29 @@ label .fa {
     width: 100%;
     height: 100%; }
 
+.tiny-thumb {
+  height: 1em;
+  width: auto;
+  margin-right: 1em; }
+
 img#edit-img {
   padding: 25px; }
 
 body {
-  background-color: #434548;
+  background-image: url("../img/background.jpg");
+  background-attachment: fixed;
+  background-size: cover;
   color: #fff; }
   body #app > .container {
-    padding-bottom: calc(2em + 200px);
-    min-height: calc(100vh - 60px); }
-  body .panel {
-    color: #636b6f;
-    border: 0;
-    border-radius: 0; }
-    body .panel .form-control {
-      background-color: #fff;
-      border-color: #ccd0d2; }
-      body .panel .form-control:focus {
-        border-color: #ccd0d2;
-        box-shadow: none; }
+    padding-bottom: calc(2em + 120px);
+    min-height: calc(100vh - 73px); }
+    body #app > .container > .row > .col-md-2, body #app > .container > .row main {
+      background-color: rgba(0, 0, 0, 0.2); }
+    body #app > .container main {
+      padding: 1em; }
+      body #app > .container main > .banner {
+        margin: -1em -1em 0;
+        width: calc(100% + 2em); }
   body .sidebar ul {
     padding: 0;
     margin-bottom: 2em;
@@ -55,67 +66,31 @@ body {
     width: auto;
     max-width: 100%; }
 
-footer {
+#app > footer {
   width: 100%;
-  background-color: #232427;
-  height: 200px;
+  background-color: rgba(35, 36, 39, 0.5);
+  height: 120px;
   color: #666;
-  margin-top: -200px; }
-  footer h5 {
+  margin-top: -120px;
+  padding-top: 10px;
+  font-size: .8em; }
+  #app > footer .title {
     color: #fff; }
-  footer a {
+  #app > footer a:not(.btn-primary) {
     color: #cc4020; }
-    footer a:hover, footer a:active, footer a:focus {
+    #app > footer a:not(.btn-primary):hover, #app > footer a:not(.btn-primary):active, #app > footer a:not(.btn-primary):focus {
       color: #b3381c; }
-  footer p.about {
-    font-style: italic;
-    font-size: .85em; }
-  footer p.copy {
-    font-size: .75em;
-    text-align: center; }
+  #app > footer a.contact {
+    color: #666; }
+    #app > footer a.contact:hover {
+      color: #cc4020; }
+  #app > footer .about {
+    font-style: italic; }
 
 .navbar-default {
-  background-color: #232427;
-  border-color: #232427;
-  position: relative; }
-  .navbar-default .navbar-collapse .navbar-nav#search {
-    width: auto;
-    margin: auto; }
-    @media (min-width: 61em) {
-      .navbar-default .navbar-collapse .navbar-nav#search {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        width: 20em; } }
-    .navbar-default .navbar-collapse .navbar-nav#search li {
-      padding-top: 12px;
-      float: left;
-      width: 100%; }
-      .navbar-default .navbar-collapse .navbar-nav#search li form {
-        overflow: hidden; }
-        .navbar-default .navbar-collapse .navbar-nav#search li form ::-webkit-input-placeholder {
-          color: #232427 !important; }
-        .navbar-default .navbar-collapse .navbar-nav#search li form :-moz-placeholder {
-          color: #232427 !important; }
-        .navbar-default .navbar-collapse .navbar-nav#search li form ::-moz-placeholder {
-          color: #232427 !important; }
-        .navbar-default .navbar-collapse .navbar-nav#search li form :-ms-input-placeholder {
-          color: #232427 !important; }
-        .navbar-default .navbar-collapse .navbar-nav#search li form input[type="text"] {
-          background-color: #777;
-          border: none;
-          color: #232427 !important;
-          width: calc(100% - 2em);
-          padding-left: .5em;
-          padding-right: .5em; }
-      .navbar-default .navbar-collapse .navbar-nav#search li button {
-        background-color: transparent;
-        border: none;
-        color: #777; }
-        .navbar-default .navbar-collapse .navbar-nav#search li button:hover, .navbar-default .navbar-collapse .navbar-nav#search li button:focus, .navbar-default .navbar-collapse .navbar-nav#search li button:active {
-          color: #c1bfbf; }
+  background-color: rgba(35, 36, 39, 0.5);
+  border-color: rgba(35, 36, 39, 0.5);
+  z-index: 999; }
   .navbar-default .navbar-collapse .navbar-nav > li > a:hover, .navbar-default .navbar-collapse .navbar-nav > li > a:focus, .navbar-default .navbar-collapse .navbar-nav > li > a:active {
     color: #c1bfbf; }
   .navbar-default .navbar-collapse .navbar-nav > li.open ul {
@@ -143,12 +118,6 @@ footer {
   .navbar-default .navbar-collapse .navbar-nav .dropdown-menu {
     border: 0;
     top: auto; }
-  .navbar-default .navbar-toggle {
-    border-radius: 0;
-    color: #c1bfbf;
-    border-color: #c1bfbf; }
-    .navbar-default .navbar-toggle:hover {
-      background-color: #c1bfbf; }
   .navbar-default .notification-bubble {
     position: absolute;
     top: -.3em;
@@ -164,6 +133,33 @@ footer {
     height: 1em;
     width: 1em;
     text-align: center; }
+
+.icon-list #search {
+  width: 100%;
+  margin: 1em 0; }
+  .icon-list #search ::-webkit-input-placeholder {
+    color: rgba(35, 36, 39, 0.5) !important; }
+  .icon-list #search :-moz-placeholder {
+    color: rgba(35, 36, 39, 0.5) !important; }
+  .icon-list #search ::-moz-placeholder {
+    color: rgba(35, 36, 39, 0.5) !important; }
+  .icon-list #search :-ms-input-placeholder {
+    color: rgba(35, 36, 39, 0.5) !important; }
+  .icon-list #search input[type="text"] {
+    width: calc(100% - 26px);
+    background-color: #777;
+    border: none;
+    color: rgba(35, 36, 39, 0.5) !important;
+    padding: 0 .5em; }
+  .icon-list #search .btn.btn-primary {
+    border: none;
+    color: #777;
+    height: 26px;
+    width: 26px;
+    padding: 0;
+    margin: 0; }
+    .icon-list #search .btn.btn-primary:hover, .icon-list #search .btn.btn-primary:focus, .icon-list #search .btn.btn-primary:active {
+      color: #c1bfbf; }
 
 .login {
   position: absolute;
@@ -193,10 +189,20 @@ h1, h2, h3, h4, h5, h6 {
 form input:focus {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6);
   outline-color: rgba(253, 72, 31, 0.6); }
-form#post-form textarea {
-  resize: none;
-  width: 100%;
-  color: #999; }
+form#post-form {
+  padding-top: .5em;
+  position: relative; }
+  form#post-form .btn-primary {
+    position: absolute;
+    bottom: .7em;
+    right: .7em; }
+  form#post-form textarea {
+    resize: none;
+    width: 100%;
+    color: #999;
+    background-color: rgba(0, 0, 0, 0.2);
+    height: 8em;
+    padding-right: calc(54px + 1.4em); }
 form input[type="number"].form-control {
   padding: 6px; }
 form .form-control {
@@ -268,6 +274,8 @@ form label.form-control {
   cursor: pointer; }
 form .banner {
   display: none; }
+form textarea {
+  overflow: hidden; }
 
 .banner {
   max-height: 300px;
@@ -283,14 +291,14 @@ form .banner {
 .users, .teams, .blocklink-wrapper {
   display: flex;
   display: -webkit-flex;
-  display: -ms-flexbox; }
+  display: -ms-flexbox;
+  margin: auto 0px; }
 
 .blocklink {
   padding: .5em;
-  position: relative;
-  box-sizing: content-box; }
+  position: relative; }
   .blocklink:hover {
-    background-color: #333535;
+    background-color: rgba(0, 0, 0, 0.2);
     cursor: pointer; }
   .blocklink .profile-img {
     width: calc(100% - .4em);
@@ -330,17 +338,41 @@ form .banner {
   height: 100%;
   position: relative; }
 
-#logo:hover svg path {
-  fill: #dedada;
-  transition: fill .2s; }
+@media (max-width: 990px) {
+  .navbar-header {
+    float: none; } }
+.navbar-header #logo {
+  margin-left: 10em; }
+  @media (max-width: 1200px) {
+    .navbar-header #logo {
+      margin-left: 8em; } }
+  @media (max-width: 990px) {
+    .navbar-header #logo {
+      float: right;
+      margin-left: 0; } }
+  @media (min-width: 80em) {
+    .navbar-header #logo {
+      margin-left: 0; } }
+  .navbar-header #logo:hover svg path {
+    fill: #dedada;
+    transition: fill .2s; }
 
 #feed {
   margin-top: 1.5em; }
   #feed .post {
-    background-color: #3a3b3e;
+    background-color: rgba(0, 0, 0, 0.2);
     margin: .25em 0;
     padding: .5em;
     color: #999; }
+    #feed .post .header {
+      color: #fff;
+      font-weight: bold; }
+    #feed .post .content {
+      padding: .1em 1.5em; }
+    #feed .post .footer {
+      font-size: .8em;
+      text-align: right;
+      font-style: italic; }
 
 .btn {
   border-radius: 0; }
@@ -353,6 +385,14 @@ form .banner {
       box-shadow: none;
       border-color: #bc3010;
       outline-color: transparent; }
+  .btn.btn-load {
+    color: #fff;
+    background-color: rgba(100, 100, 100, 0.2);
+    width: 100%;
+    text-align: center;
+    margin-top: 1em; }
+    .btn.btn-load:hover, .btn.btn-load:focus, .btn.btn-load:active {
+      opacity: .8; }
   .btn.btn-dropdown {
     background-color: transparent;
     border-color: transparent;
@@ -390,7 +430,7 @@ table.table tr {
     table.table tr td.empty {
       text-align: center; }
 table.table.table-striped td:nth-child(even) {
-  background-color: #232427; }
+  background-color: rgba(35, 36, 39, 0.5); }
 
 #map {
   width: 100%;
@@ -407,17 +447,23 @@ table.table.table-striped td:nth-child(even) {
 i.accent {
   font-size: 1.5em; }
 
+a.accent:hover, a.accent:focus, a.accent:active {
+  color: #cc4020; }
+
 .accent {
   color: #cc4020; }
 
-.modal-content {
-  color: #000;
-  border-radius: 0; }
-  .modal-content form > * {
-    color: #000; }
-
-.modal-footer .btn-primary {
-  margin: 0; }
+.modal .modal-header {
+  border: none; }
+.modal .modal-content {
+  color: #fff;
+  border-radius: 0;
+  border: none;
+  background-color: #2e2f30; }
+.modal .modal-footer {
+  border: none; }
+  .modal .modal-footer .btn-primary {
+    margin: 0; }
 
 .switch {
   position: relative;
@@ -478,10 +524,11 @@ i.accent {
   position: relative;
   height: calc(100vh - 50px);
   margin-top: -22px;
+  margin-bottom: 22px;
   overflow: hidden; }
   .fade-carousel a.scrollDown {
     position: absolute;
-    bottom: 5em;
+    bottom: 2em;
     left: 0;
     right: 0;
     margin: auto;
@@ -490,23 +537,23 @@ i.accent {
     text-align: center;
     color: #777;
     z-index: 1;
-    padding: 6px;
-    border: 1px solid #777;
-    background-color: rgba(119, 119, 119, 0.3); }
+    padding: 5px 6px 7px 6px; }
     .fade-carousel a.scrollDown:hover, .fade-carousel a.scrollDown:active {
-      background-color: #777;
-      color: #232427; }
+      background-color: rgba(204, 204, 204, 0.3);
+      color: rgba(35, 36, 39, 0.5); }
   .fade-carousel .carousel-inner .item {
     height: 100vh; }
-  .fade-carousel .carousel-indicators > li {
-    margin: 0 2px;
-    background-color: #cc4020;
-    border-color: #cc4020;
-    opacity: .7; }
-    .fade-carousel .carousel-indicators > li.active {
-      width: 10px;
-      height: 10px;
-      opacity: 1; }
+  .fade-carousel .carousel-indicators {
+    bottom: 6em; }
+    .fade-carousel .carousel-indicators li {
+      margin: 0 2px;
+      background-color: #cc4020;
+      border-color: #cc4020;
+      opacity: .7; }
+      .fade-carousel .carousel-indicators li.active {
+        width: 10px;
+        height: 10px;
+        opacity: 1; }
 
 .hero {
   position: absolute;
@@ -569,7 +616,8 @@ i.accent {
   height: 100vh;
   background-size: cover;
   background-position: center center;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat;
+  background-attachment: fixed; }
 .fade-carousel .slides .slide-1 {
   background-image: url("../img/slide-1.jpg"); }
 .fade-carousel .slides .slide-2 {
