--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,17 +37,22 @@ body {
   background-image: url("../img/background.jpg");
   background-attachment: fixed;
   background-size: cover;
-  color: #fff; }
+  color: #fff;
+  font-family: 'Raleway', sans-serif; }
   body #app > .container {
-    padding-bottom: calc(2em + 120px);
+    padding-bottom: 142px;
     min-height: calc(100vh - 73px); }
     body #app > .container > .row > .col-md-2, body #app > .container > .row main {
       background-color: rgba(0, 0, 0, 0.2); }
     body #app > .container main {
-      padding: 1em; }
+      padding: 1em;
+      min-height: calc(100vh - 215px); }
       body #app > .container main > .banner {
         margin: -1em -1em 0;
         width: calc(100% + 2em); }
+  @media (max-width: 990px) {
+    body .sidebar {
+      display: none; } }
   body .sidebar ul {
     padding: 0;
     margin-bottom: 2em;
@@ -91,48 +96,27 @@ body {
   background-color: rgba(35, 36, 39, 0.5);
   border-color: rgba(35, 36, 39, 0.5);
   z-index: 999; }
-  .navbar-default .navbar-collapse .navbar-nav > li > a:hover, .navbar-default .navbar-collapse .navbar-nav > li > a:focus, .navbar-default .navbar-collapse .navbar-nav > li > a:active {
+  @media (max-width: 990px) {
+    .navbar-default .navbar-nav {
+      display: none; } }
+  .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:active {
     color: #c1bfbf; }
-  .navbar-default .navbar-collapse .navbar-nav > li.open ul {
-    background-color: #3b3c40; }
-  .navbar-default .navbar-collapse .navbar-nav > li.open a {
-    background-color: #3b3c40;
-    color: #777; }
-    .navbar-default .navbar-collapse .navbar-nav > li.open a:hover, .navbar-default .navbar-collapse .navbar-nav > li.open a:focus, .navbar-default .navbar-collapse .navbar-nav > li.open a:active {
-      background-color: #3b3c40;
-      color: #c1bfbf; }
-  .navbar-default .navbar-collapse .navbar-nav > li.open .block {
-    display: inline-block;
-    min-width: 100%;
-    border-bottom: 1px solid #444;
-    margin-bottom: 1em; }
-    .navbar-default .navbar-collapse .navbar-nav > li.open .block span {
-      padding: 3px 20px;
-      color: #777;
-      white-space: pre;
-      margin-right: 80px;
-      display: block;
-      line-height: 34px; }
-    .navbar-default .navbar-collapse .navbar-nav > li.open .block .switch {
-      margin-right: 20px; }
-  .navbar-default .navbar-collapse .navbar-nav .dropdown-menu {
-    border: 0;
-    top: auto; }
-  .navbar-default .notification-bubble {
-    position: absolute;
-    top: -.3em;
-    left: -.6em;
-    display: none;
-    border-radius: 50%;
-    padding: .1em;
-    box-sizing: content-box;
-    background-color: #f00;
-    color: #fff;
-    font-size: .6em;
-    line-height: 1em;
-    height: 1em;
-    width: 1em;
-    text-align: center; }
+
+.excl-bubble {
+  position: absolute;
+  top: -8px;
+  z-index: 1;
+  display: none;
+  border-radius: 50%;
+  padding: .1em;
+  box-sizing: content-box;
+  background-color: #cc4020;
+  color: #fff;
+  font-size: .6em;
+  line-height: 1em;
+  height: 1em;
+  width: 1em;
+  text-align: center; }
 
 .icon-list #search {
   width: 100%;
@@ -160,6 +144,21 @@ body {
     margin: 0; }
     .icon-list #search .btn.btn-primary:hover, .icon-list #search .btn.btn-primary:focus, .icon-list #search .btn.btn-primary:active {
       color: #c1bfbf; }
+.icon-list .notification-bubble, .icon-list .friend-bubble {
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  display: none;
+  border-radius: 50%;
+  padding: .1em;
+  box-sizing: content-box;
+  background-color: #cc4020;
+  color: #fff;
+  font-size: .6em;
+  line-height: 1em;
+  height: 1em;
+  width: 1em;
+  text-align: center; }
 
 .login {
   position: absolute;
@@ -212,6 +211,12 @@ form .form-control {
   form .form-control:focus {
     border-color: #3a3b3e;
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6); }
+form select {
+  width: 100%; }
+form [class^='select2'] {
+  border-radius: 0 !important; }
+form .select2-dropdown {
+  border-radius: 0 !important; }
 form ::-webkit-input-placeholder {
   color: #555 !important; }
 form :-moz-placeholder {
@@ -364,6 +369,12 @@ form textarea {
     margin: .25em 0;
     padding: .5em;
     color: #999; }
+    #feed .post a {
+      color: #cc4020; }
+      #feed .post a.toggleSeen {
+        color: #4d4d4d; }
+        #feed .post a.toggleSeen:hover .fa-circle:before {
+          content: "\f10c"; }
     #feed .post .header {
       color: #fff;
       font-weight: bold; }
@@ -385,6 +396,8 @@ form textarea {
       box-shadow: none;
       border-color: #bc3010;
       outline-color: transparent; }
+  .btn.btn-secondary {
+    background-color: #434548; }
   .btn.btn-load {
     color: #fff;
     background-color: rgba(100, 100, 100, 0.2);
@@ -404,6 +417,8 @@ form textarea {
     .btn.btn-dropdown:active, .btn.btn-dropdown:focus, .btn.btn-dropdown:hover {
       background-color: #dbdbdb;
       color: #434548; }
+  .btn.btn-lfg {
+    margin-bottom: 1em; }
 
 .dropdown .dropdown-menu {
   background-color: #dbdbdb;
@@ -420,17 +435,6 @@ form textarea {
 .thumb {
   width: 100%;
   height: auto; }
-
-table.table thead th {
-  border-bottom: 2px solid #393b3e; }
-table.table tr {
-  background-color: transparent !important; }
-  table.table tr td {
-    background-color: transparent; }
-    table.table tr td.empty {
-      text-align: center; }
-table.table.table-striped td:nth-child(even) {
-  background-color: rgba(35, 36, 39, 0.5); }
 
 #map {
   width: 100%;
@@ -631,5 +635,129 @@ a.accent:hover, a.accent:focus, a.accent:active {
 @media screen and (max-width: 640px) {
   .hero h1 {
     font-size: 4em; } }
+.leaderboard {
+  margin-bottom: -15px; }
+  .leaderboard > :nth-child(2) {
+    margin-top: 2px; }
+  .leaderboard .row.leaderboard-team {
+    background-color: rgba(0, 0, 0, 0.2);
+    padding: .3em;
+    height: 6em; }
+    .leaderboard .row.leaderboard-team:not(.place-1):not(.place-2):not(.place-3):not(:last-child) {
+      border-bottom: 1px solid rgba(54, 53, 53, 0.47); }
+    .leaderboard .row.leaderboard-team[class^="place-"] {
+      height: 10em; }
+      .leaderboard .row.leaderboard-team[class^="place-"].place-1 {
+        background-color: rgba(255, 190, 0, 0.3); }
+        .leaderboard .row.leaderboard-team[class^="place-"].place-1 > :first-child {
+          color: gold; }
+      .leaderboard .row.leaderboard-team[class^="place-"].place-2 {
+        background-color: rgba(255, 255, 255, 0.3);
+        height: 10em; }
+        .leaderboard .row.leaderboard-team[class^="place-"].place-2 > :first-child {
+          color: silver; }
+      .leaderboard .row.leaderboard-team[class^="place-"].place-3 {
+        background-color: rgba(255, 95, 0, 0.3);
+        height: 10em; }
+        .leaderboard .row.leaderboard-team[class^="place-"].place-3 > :first-child {
+          color: burlywood; }
+      .leaderboard .row.leaderboard-team[class^="place-"].place-2 .title, .leaderboard .row.leaderboard-team[class^="place-"].place-3 .title {
+        font-size: 2em; }
+      .leaderboard .row.leaderboard-team[class^="place-"] .title {
+        font-size: 3em; }
+      .leaderboard .row.leaderboard-team[class^="place-"] .profile-img {
+        height: 8em !important;
+        width: 8em !important; }
+    .leaderboard .row.leaderboard-team.my-team {
+      transform: scale(1.03);
+      padding: 10px 15px;
+      background-color: rgba(54, 53, 53, 0.47); }
+    .leaderboard .row.leaderboard-team > [class^="col-md-"] > .row,
+    .leaderboard .row.leaderboard-team [class^="col-md-"] {
+      height: 100%; }
+    .leaderboard .row.leaderboard-team > [class^="col-md-"] {
+      position: relative;
+      height: 100%; }
+      .leaderboard .row.leaderboard-team > [class^="col-md-"]:first-child > * {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        height: 1em;
+        width: 1em; }
+    .leaderboard .row.leaderboard-team .col-md-4, .leaderboard .row.leaderboard-team .col-md-3, .leaderboard .row.leaderboard-team .col-md-2 {
+      position: relative; }
+      .leaderboard .row.leaderboard-team .col-md-4 > .profile-img, .leaderboard .row.leaderboard-team .col-md-3 > .profile-img, .leaderboard .row.leaderboard-team .col-md-2 > .profile-img {
+        height: 3em;
+        width: 3em;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto; }
+        .leaderboard .row.leaderboard-team .col-md-4 > .profile-img img, .leaderboard .row.leaderboard-team .col-md-3 > .profile-img img, .leaderboard .row.leaderboard-team .col-md-2 > .profile-img img {
+          max-height: 100%; }
+    .leaderboard .row.leaderboard-team:not(.place-1):not(.place-2):not(.place-3) .title {
+      line-height: 4em;
+      height: 4em; }
+    .leaderboard .row.leaderboard-team .title {
+      font-size: 1.5em;
+      height: 2em;
+      line-height: 2em;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      display: block; }
+    .leaderboard .row.leaderboard-team .score {
+      text-align: center;
+      position: relative; }
+      .leaderboard .row.leaderboard-team .score .col-md-12 {
+        padding-left: 30px; }
+      .leaderboard .row.leaderboard-team .score span:not(:last-child) {
+        margin-right: 1em; }
+      .leaderboard .row.leaderboard-team .score i {
+        margin-right: .5em; }
+        .leaderboard .row.leaderboard-team .score i.fa-trophy {
+          color: gold; }
+        .leaderboard .row.leaderboard-team .score i.fa-crosshairs {
+          color: red; }
+        .leaderboard .row.leaderboard-team .score i.fa-pause {
+          color: white; }
+    .leaderboard .row.leaderboard-team .a-w {
+      width: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      position: absolute;
+      margin: auto;
+      height: 1em; }
+    .leaderboard .row.leaderboard-team .f-h {
+      height: 100%; }
+
+*:not(.leaderboard-team :first-child) .fa-trophy {
+  margin-right: 1em;
+  color: gold; }
+*:not(.leaderboard-team :first-child) .fa-pause {
+  margin-right: 1em;
+  color: white; }
+*:not(.leaderboard-team :first-child) .fa-crosshairs {
+  margin-right: 1em;
+  color: red; }
+
+.ratio {
+  margin-right: 1em; }
+  .ratio .fa-trophy, .ratio .fa-crosshairs {
+    color: white;
+    margin: 0; }
+
+.menu-hidden {
+  display: none; }
+  @media (max-width: 990px) {
+    .menu-hidden {
+      display: block; } }
 
 /*# sourceMappingURL=style.css.map */
