--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,10 @@
 
 label .fa {
   font-size: 1.5em; }
+  label .fa.fa-asterisk {
+    color: #cc4020;
+    font-size: .7em;
+    vertical-align: super; }
 
 .img {
   width: 250px;
@@ -99,8 +103,11 @@ body {
   @media (max-width: 990px) {
     .navbar-default .navbar-nav {
       display: none; } }
-  .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:active {
-    color: #c1bfbf; }
+  .navbar-default .navbar-nav > li > a {
+    cursor: pointer; }
+    .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-nav > li > a:active {
+      color: #c1bfbf;
+      cursor: pointer; }
 
 .excl-bubble {
   position: absolute;
@@ -122,13 +129,13 @@ body {
   width: 100%;
   margin: 1em 0; }
   .icon-list #search ::-webkit-input-placeholder {
-    color: rgba(35, 36, 39, 0.5) !important; }
+    color: #232427 !important; }
   .icon-list #search :-moz-placeholder {
-    color: rgba(35, 36, 39, 0.5) !important; }
+    color: #232427 !important; }
   .icon-list #search ::-moz-placeholder {
-    color: rgba(35, 36, 39, 0.5) !important; }
+    color: #232427 !important; }
   .icon-list #search :-ms-input-placeholder {
-    color: rgba(35, 36, 39, 0.5) !important; }
+    color: #232427 !important; }
   .icon-list #search input[type="text"] {
     width: calc(100% - 26px);
     background-color: #777;
@@ -182,9 +189,11 @@ body {
   .login .col-md-7 {
     border-right: 1px solid #d3e0e9; }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3 {
   font-family: 'Oswald', sans-serif; }
 
+form em {
+  font-size: .8em; }
 form input:focus {
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6);
   outline-color: rgba(253, 72, 31, 0.6); }
@@ -218,15 +227,15 @@ form [class^='select2'] {
 form .select2-dropdown {
   border-radius: 0 !important; }
 form ::-webkit-input-placeholder {
-  color: #555 !important; }
+  color: #777 !important; }
 form :-moz-placeholder {
-  color: #555 !important;
+  color: #777 !important;
   opacity: 1; }
 form ::-moz-placeholder {
-  color: #555 !important;
+  color: #777 !important;
   opacity: 1; }
 form :-ms-input-placeholder {
-  color: #555 !important; }
+  color: #777 !important; }
 form .blocklink input[type="checkbox"] ~ label:before, form .blocklink input[type="checkbox"]:checked ~ label:before, form .blocklink input[type="checkbox"] ~ label:active, form .blocklink input[type="checkbox"]:focus ~ label:before {
   color: white; }
 form input[type=radio],
@@ -759,5 +768,22 @@ a.accent:hover, a.accent:focus, a.accent:active {
   @media (max-width: 990px) {
     .menu-hidden {
       display: block; } }
+
+#send-message-form #message-input {
+  resize: none;
+  background-color: rgba(35, 36, 39, 0.5);
+  color: #c1bfbf;
+  border: none;
+  border-top: 1px solid #434548; }
+
+#message-box {
+  height: 18em;
+  background-color: rgba(35, 36, 39, 0.5);
+  overflow-y: scroll;
+  padding: 1em;
+  overflow-x: hidden; }
+
+.stealth-mode {
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
