--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -3,6 +3,7 @@ $overlay-color:	rgba(0,0,0,.2);
 $accent:		#cc4020;
 $text-color:	#c1bfbf;
 $nav-color:	rgba(35,36,39,.5);
+$placeholder-color: rgb(35,36,39);
 
 //MEDIA
 $tabletMini:	    "(min-width: 37em)"; /* 600px */
@@ -19,7 +20,10 @@ $large:			    "(min-width: 93em)"; /* 1488px */
 
 .alert-success { background-color: #57B97F; border-color: #57B97F; color: #005A24; border-radius: 0; margin-top: -22px; }
 
-label .fa { font-size: 1.5em; }
+label .fa {
+	font-size: 1.5em;
+	&.fa-asterisk { color: $accent; font-size: .7em; vertical-align: super; }
+}
 .img {
 	width: 250px; height: 250px; display: none;
 	img { width: 100%; height: 100%; }
@@ -76,7 +80,8 @@ body {
 		@media #{$mobile-bootstrap} { display: none; }
 		&>li {
 			&>a {
-				&:hover, &:focus, &:active { color: $text-color; }
+				cursor: pointer;
+				&:hover, &:focus, &:active { color: $text-color; cursor: pointer; }
 			}
 		}
 	}
@@ -89,10 +94,10 @@ body {
 .icon-list {
 	#search {
 		width: 100%; margin: 1em 0;
-		::-webkit-input-placeholder { color: $nav-color !important; }
-		:-moz-placeholder { color: $nav-color !important; }
-		::-moz-placeholder { color: $nav-color !important; }
-		:-ms-input-placeholder { color: $nav-color !important; }
+		::-webkit-input-placeholder { color: $placeholder-color !important; }
+		:-moz-placeholder { color: $placeholder-color !important; }
+		::-moz-placeholder { color: $placeholder-color !important; }
+		:-ms-input-placeholder { color: $placeholder-color !important; }
 
 		input[type="text"] {
 			width: calc(100% - 26px); background-color: #777; border: none; color: $nav-color !important;
@@ -114,9 +119,10 @@ body {
 	&>.col-md-4 { z-index: 11; }
 	.col-md-7 { border-right: 1px solid #d3e0e9; }
 }
-h1,h2,h3,h4,h5,h6 { font-family: 'Oswald', sans-serif; }
+h1,h2,h3 { font-family: 'Oswald', sans-serif; }
 
 form {
+	em { font-size: .8em; }
 	input:focus { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(253, 72, 31, 0.6); outline-color: rgba(253, 72, 31, 0.6);; }
 	&#post-form {
 		padding-top: .5em; position: relative;
@@ -136,10 +142,10 @@ form {
 	[class^='select2'] { border-radius: 0 !important; }
 	.select2-dropdown { border-radius: 0 !important; }
 
-	::-webkit-input-placeholder { color: #555 !important; }
-	:-moz-placeholder { color: #555 !important; opacity: 1; }
-	::-moz-placeholder { color: #555 !important; opacity: 1 }
-	:-ms-input-placeholder { color: #555 !important; }
+	::-webkit-input-placeholder { color: #777 !important; }
+	:-moz-placeholder { color: #777 !important; opacity: 1; }
+	::-moz-placeholder { color: #777 !important; opacity: 1 }
+	:-ms-input-placeholder { color: #777 !important; }
 
 	.blocklink input[type="checkbox"] {
 		& ~ label:before, &:checked ~ label:before,
@@ -477,3 +483,13 @@ a.accent:hover, a.accent:focus, a.accent:active { color: $accent; }
 	display: none;
 	@media #{$mobile-bootstrap} { display: block; }
 }
+
+#send-message-form {
+	#message-input {
+		resize: none; background-color: $nav-color; color: $text-color;
+		border: none; border-top: 1px solid $bgc;
+	}
+}
+#message-box { height: 18em; background-color: $nav-color; overflow-y: scroll; padding: 1em; overflow-x: hidden; }
+
+.stealth-mode { display: none; }
